--- a/app/src/main/res/anim/bottom_slide_in.xml
+++ b/app/src/main/res/anim/bottom_slide_in.xml
@@ -2,8 +2,8 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <translate
-        android:fromYDelta="100%p"
-        android:toYDelta="0"
-        android:duration="@android:integer/config_longAnimTime"/>
+        android:fromYDelta="100%"
+        android:toYDelta="1%"
+        android:duration="@android:integer/config_shortAnimTime"/>
 
 </set>
