--- a/app/src/main/res/layout/activity_second_chain_onboarding.xml
+++ b/app/src/main/res/layout/activity_second_chain_onboarding.xml
@@ -134,12 +134,13 @@
 
                     <com.google.android.material.card.MaterialCardView
                         android:id="@+id/cardImg"
-                        android:layout_width="110dp"
+                        android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginEnd="70dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardElevation="2dp"
+                        app:layout_constraintDimensionRatio="1:1"
                         app:layout_constraintBottom_toBottomOf="@id/nop"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@id/propertyChainLayout"
