--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="primary">#ACD037</color>
     <color name="secondary">#272A3D</color>
     <color name="lightBlack">#717A8F</color>
+    <color name="shadowColor">#7B7F80</color>
     <color name="textColor">#171717</color>
     <color name="subtitle">#828282</color>
     <color name="primaryBackground">#FFFFFF</color>
