--- a/app/src/main/res/layout/fragment_promotions.xml
+++ b/app/src/main/res/layout/fragment_promotions.xml
@@ -54,10 +54,9 @@
             android:id="@+id/searchCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/CardViewTheme"
             app:cardCornerRadius="8dp"
             app:cardElevation="4dp"
-            android:outlineAmbientShadowColor="@color/shadowColor"
-            android:outlineSpotShadowColor="@color/shadowColor"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="@id/aA"
             app:layout_constraintTop_toBottomOf="@id/aA"
@@ -197,7 +196,7 @@
                     android:textSize="@dimen/H3"/>
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/topPerformingPropertyRecyclerView"
+                    android:id="@+id/livePromotionsRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
