--- a/app/src/main/res/layout/fragment_view_properties.xml
+++ b/app/src/main/res/layout/fragment_view_properties.xml
@@ -54,10 +54,9 @@
             android:id="@+id/searchCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/CardViewTheme"
             app:cardCornerRadius="8dp"
             app:cardElevation="4dp"
-            android:outlineAmbientShadowColor="@color/shadowColor"
-            android:outlineSpotShadowColor="@color/shadowColor"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="@id/aA"
             app:layout_constraintTop_toBottomOf="@id/aA"
@@ -171,12 +170,11 @@
             android:id="@+id/allProp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            style="@style/CardViewTheme"
             android:layout_marginTop="20dp"
             android:visibility="gone"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp"
-            android:outlineAmbientShadowColor="@color/shadowColor"
-            android:outlineSpotShadowColor="@color/shadowColor"
             app:layout_constraintEnd_toEndOf="@id/llView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/searchCard">
@@ -298,12 +296,11 @@
             android:id="@+id/propLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            style="@style/CardViewTheme"
             android:visibility="visible"
             android:layout_marginTop="20dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp"
-            android:outlineAmbientShadowColor="@color/shadowColor"
-            android:outlineSpotShadowColor="@color/shadowColor"
             app:layout_constraintEnd_toEndOf="@id/llView"
             app:layout_constraintTop_toBottomOf="@id/searchCard"
             app:layout_constraintStart_toStartOf="@id/searchCard">
