--- a/app/src/main/res/layout/activity_first_on_boarding_screen.xml
+++ b/app/src/main/res/layout/activity_first_on_boarding_screen.xml
@@ -76,7 +76,7 @@
                     android:layout_height="wrap_content"
                     android:transitionName="backBtn"
                     android:layout_marginTop="40dp"
-                    android:layout_marginStart="50dp"
+                    android:layout_marginStart="60dp"
                     tools:layout_editor_absoluteY="15dp"
                     tools:ignore="MissingConstraints"
                     app:layout_constraintStart_toStartOf="parent"
@@ -85,15 +85,14 @@
 
                 <TextView
                     android:id="@+id/heading"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Tell us about your property"
                     android:textSize="@dimen/H2"
                     android:textColor="@color/black"
                     android:fontFamily="@font/roboto_bold"
                     android:layout_marginTop="30dp"
-                    android:layout_marginStart="50dp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/demoBackbtn"
                     app:layout_constraintTop_toBottomOf="@id/demoBackbtn"/>
 
                 <LinearLayout
@@ -188,16 +187,15 @@
 
                 </LinearLayout>
 
-                <com.google.android.material.card.MaterialCardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/card_SingleNext"
                     android:layout_width="170dp"
-                    android:layout_height="50dp"
+                    android:layout_height="@dimen/button_height"
+                    style="@style/ButtonCardView"
                     android:transitionName="Btn"
-                    android:backgroundTint="@color/secondary"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintHorizontal_bias="0.8"
-                    app:layout_constraintVertical_bias="0.9"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginEnd="60dp"
+                    android:layout_marginBottom="40dp"
+                    app:cardBackgroundColor="@color/secondary"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
 
@@ -211,7 +209,7 @@
                         android:textSize="@dimen/H5"
                         />
 
-                </com.google.android.material.card.MaterialCardView>
+                </androidx.cardview.widget.CardView>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
