--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -69,6 +69,7 @@
         android:id="@+id/cardF"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        style="@style/OnBoardingCardViewTheme"
         app:layout_constraintStart_toEndOf="@+id/frame1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,15 +92,16 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
+                    android:id="@+id/openLoginScreen"
                     android:layout_width="170dp"
                     android:layout_height="match_parent"
-                    android:text="@string/log_in"
+                    android:text="@string/existing_user_log_in"
                     android:textAlignment="center"
                     android:gravity="center"
-                    android:textColor="@color/white"
-                    android:background="@drawable/corner_left_black_background"
+                    android:textColor="@color/black"
+                    android:background="@drawable/corner_left_grey_background"
                     android:textSize="@dimen/H5"
-                    android:fontFamily="@font/roboto_bold"
+                    android:fontFamily="@font/roboto"
                     android:textFontWeight="500"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -111,15 +113,15 @@
                     android:background="@color/black"/>
 
                 <TextView
-                    android:id="@+id/signUp"
+                    android:id="@+id/openSignUpScreen"
                     android:layout_width="170dp"
                     android:layout_height="match_parent"
-                    android:text="@string/new_here_sign_up"
+                    android:text="@string/sign_up"
                     android:textAlignment="center"
-                    android:background="@drawable/corner_right_grey_background"
+                    android:background="@drawable/corner_right_black_background"
                     android:gravity="center"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/H5"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/H4"
                     android:fontFamily="@font/roboto_bold"
                     android:textFontWeight="500"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -128,124 +130,13 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/ll5"
+            <FrameLayout
+                android:id="@+id/authFragContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginHorizontal="50dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/loginTitle">
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/username_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/TextInputLayoutStyle"
-                    android:hint="Username"
-                    android:layout_marginTop="40dp"
-                    app:startIconDrawable="@drawable/svg_username"
-                    app:startIconTint="@color/black"
-                    app:endIconMode="clear_text"
-                    app:endIconTint="@color/black">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/username"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fontFamily="@font/roboto"
-                        android:inputType="text"
-                        android:textColorHint="@color/secondary"
-                        android:textColor="@color/secondary" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/auth_Code_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/TextInputLayoutStyle"
-                    android:hint="Hotel R code"
-                    app:startIconDrawable="@drawable/svg_hotel_code"
-                    app:startIconTint="@color/black"
-                    android:layout_marginTop="15dp"
-                    app:endIconMode="clear_text"
-                    app:endIconTint="@color/black">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/auth_Code"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:textColorHint="@color/secondary"
-                        android:fontFamily="@font/roboto"
-                        android:inputType="text"
-                        android:textColor="@color/secondary" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/password_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/TextInputLayoutStyle"
-                    android:hint="Password"
-                    android:layout_marginTop="15dp"
-                    app:startIconDrawable="@drawable/svg_key"
-                    app:startIconTint="@color/black"
-                    app:endIconMode="password_toggle"
-                    app:endIconTint="@color/black">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/password"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fontFamily="@font/roboto"
-                        android:inputType="textPassword"
-                        android:textColorHint="@color/secondary"
-                        android:textColor="@color/secondary" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-            </LinearLayout>
-
-
-            <TextView
-                android:id="@+id/forgot_pass_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Forgot Password ?"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/secondary"
-                android:textFontWeight="400"
-                android:fontFamily="@font/roboto"
-                android:textSize="15dp"
-                app:layout_constraintEnd_toEndOf="@id/ll5"
-                app:layout_constraintTop_toBottomOf="@id/ll5"/>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/signIn_Card"
-                android:layout_width="wrap_content"
-                android:layout_height="45dp"
-                android:transitionName="Btn"
-                app:layout_constraintTop_toBottomOf="@+id/ll5"
-                android:layout_marginTop="75dp"
-                app:cardBackgroundColor="@color/black"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:cardCornerRadius="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/log_in"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/roboto_bold"
-                    android:textSize="@dimen/H5"
-                    android:textColor="@color/white"
-                    android:layout_marginHorizontal="70dp"/>
-
-            </androidx.cardview.widget.CardView>
+                app:layout_constraintTop_toBottomOf="@+id/loginTitle"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
