--- a/app/src/main/res/layout/activity_second_chain_onboarding.xml
+++ b/app/src/main/res/layout/activity_second_chain_onboarding.xml
@@ -76,7 +76,7 @@
                     android:src="@drawable/vector_back_btn"
                     android:transitionName="backBtn"
                     android:layout_marginTop="40dp"
-                    android:layout_marginStart="70dp"
+                    android:layout_marginStart="60dp"
                     tools:layout_editor_absoluteY="15dp"
                     tools:ignore="MissingConstraints"
                     app:layout_constraintTop_toTopOf="parent"
@@ -136,15 +136,17 @@
                         android:id="@+id/cardImg"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginEnd="70dp"
-                        app:cardBackgroundColor="@color/white"
+                        style="@style/CardViewTheme"
                         app:cardElevation="2dp"
+                        app:strokeWidth="1dp"
+                        app:cardCornerRadius="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="60dp"
+                        app:cardBackgroundColor="@color/white"
                         app:layout_constraintDimensionRatio="1:1"
                         app:layout_constraintBottom_toBottomOf="@id/nop"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@id/propertyChainLayout"
-                        app:strokeWidth="2dp">
+                        app:layout_constraintTop_toTopOf="@id/propertyChainLayout">
 
                         <ImageView
                             android:id="@+id/selectImg"
@@ -193,7 +195,7 @@
                         style="@style/TextInputLayoutStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="70dp"
+                        android:layout_marginStart="60dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="10dp"
                         android:hint="Property Chain Name"
@@ -218,6 +220,7 @@
                         android:id="@+id/nop"
                         android:layout_width="0dp"
                         android:layout_height="45dp"
+                        app:cardElevation="0dp"
                         app:strokeWidth="1dp"
                         app:strokeColor="@color/subtitle"
                         android:layout_marginTop="15dp"
@@ -358,16 +361,16 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <com.google.android.material.card.MaterialCardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/card_SingleNext"
                         android:layout_width="170dp"
-                        android:layout_height="50dp"
+                        android:layout_height="@dimen/button_height"
+                        style="@style/ButtonCardView"
                         android:backgroundTint="@color/secondary"
                         android:transitionName="Btn"
+                        android:layout_marginBottom="40dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@id/cardImg"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.9">
+                        app:layout_constraintEnd_toEndOf="@id/cardImg">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -375,10 +378,10 @@
                             android:layout_gravity="center"
                             android:fontFamily="@font/roboto_bold"
                             android:text="@string/next"
-                            android:textColor="@color/primary"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/H5" />
 
-                    </com.google.android.material.card.MaterialCardView>
+                    </androidx.cardview.widget.CardView>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
