--- a/app/src/main/res/layout/activity_second_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_second_onboarding_screen.xml
@@ -55,6 +55,7 @@
         android:id="@+id/frame2"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        style="@style/OnBoardingCardViewTheme"
         app:layout_constraintStart_toEndOf="@id/frame1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -169,11 +170,12 @@
                         android:id="@+id/cardGallery"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
+                        style="@style/CardViewTheme"
                         android:layout_marginEnd="60dp"
                         android:layout_marginTop="5dp"
                         app:cardElevation="2dp"
                         app:cardCornerRadius="10dp"
-                        app:strokeWidth="2dp"
+                        app:strokeWidth="1dp"
                         app:cardBackgroundColor="@color/white"
                         app:layout_constraintDimensionRatio="1:1"
                         app:layout_constraintTop_toTopOf="@id/property_layout"
@@ -398,6 +400,8 @@
                         android:hint="Basic Currency"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
+                        app:layout_constraintVertical_bias="0.0"
+                        app:layout_constraintBottom_toTopOf="@id/card_SingleNext"
                         app:layout_constraintEnd_toEndOf="@id/city_layout"
                         app:layout_constraintStart_toEndOf="@id/state_layout"
                         app:layout_constraintTop_toBottomOf="@+id/city_layout">
@@ -422,16 +426,15 @@
                         android:layout_height="50dp"
                         android:transitionName="Btn"
                         android:backgroundTint="@color/secondary"
-                        app:layout_constraintVertical_bias="0.8"
+                        android:layout_marginBottom="40dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/currency_layout"
                         app:layout_constraintEnd_toEndOf="@id/currency_layout">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/next"
-                            android:textColor="@color/primary"
+                            android:textColor="@color/white"
                             android:fontFamily="@font/roboto_bold"
                             android:layout_gravity="center"
                             android:textSize="@dimen/H5"/>
