--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -154,6 +154,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:cardCornerRadius="10dp"
                     app:strokeWidth="2dp"
+                    app:cardBackgroundColor="@color/white"
                     app:strokeColor="@color/secondary">
 
                     <TextView
@@ -205,23 +206,23 @@
                     android:id="@+id/AccontLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:visibility="visible"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/or"
-                    android:visibility="visible">
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/or">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/firstNameLayout"
+                        style="@style/TextInputLayoutStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/TextInputLayoutStyle"
-                        android:hint="First Name"
                         android:layout_marginStart="50dp"
+                        android:hint="First Name"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
                         app:layout_constraintEnd_toStartOf="@id/lastNameLayout"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent">
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/firstNameText"
@@ -229,23 +230,23 @@
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
                             android:inputType="text"
-                            android:textColorHint="@color/secondary"
-                            android:textColor="@color/secondary" />
+                            android:textColor="@color/secondary"
+                            android:textColorHint="@color/secondary" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/lastNameLayout"
+                        style="@style/TextInputLayoutStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/TextInputLayoutStyle"
-                        android:hint="Last Name"
-                        android:layout_marginEnd="50dp"
                         android:layout_marginStart="10dp"
+                        android:layout_marginEnd="50dp"
+                        android:hint="Last Name"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
-                        app:layout_constraintStart_toEndOf="@id/firstNameLayout"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/firstNameLayout"
                         app:layout_constraintTop_toTopOf="parent">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -254,49 +255,49 @@
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
                             android:inputType="text"
-                            android:textColorHint="@color/secondary"
-                            android:textColor="@color/secondary" />
+                            android:textColor="@color/secondary"
+                            android:textColorHint="@color/secondary" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/designationLayout"
+                        style="@style/ClickableTextInputLayoutStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/ClickableTextInputLayoutStyle"
-                        android:hint="Designation"
                         android:layout_marginTop="10dp"
-                        app:layout_constraintStart_toStartOf="@id/firstNameLayout"
+                        android:hint="Designation"
                         app:layout_constraintEnd_toEndOf="@id/lastNameLayout"
+                        app:layout_constraintStart_toStartOf="@id/firstNameLayout"
                         app:layout_constraintTop_toBottomOf="@id/firstNameLayout">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/designationText"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:fontFamily="@font/roboto"
-                            android:inputType="text"
-                            android:textColorHint="@color/secondary"
-                            android:textColor="@color/secondary"
                             android:clickable="true"
                             android:editable="false"
-                            android:focusable="true"/>
+                            android:focusable="true"
+                            android:fontFamily="@font/roboto"
+                            android:inputType="text"
+                            android:textColor="@color/secondary"
+                            android:textColorHint="@color/secondary" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/phoneLayout"
+                        style="@style/TextInputLayoutStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/TextInputLayoutStyle"
-                        android:hint="Phone Number"
-                        app:placeholderText="+91 0000000000"
                         android:layout_marginTop="10dp"
+                        android:hint="Phone Number"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
                         app:layout_constraintEnd_toEndOf="@id/lastNameLayout"
+                        app:layout_constraintStart_toStartOf="@id/firstNameLayout"
                         app:layout_constraintTop_toBottomOf="@id/designationLayout"
-                        app:layout_constraintStart_toStartOf="@id/firstNameLayout">
+                        app:placeholderText="+91 0000000000">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/phoneText"
@@ -304,24 +305,24 @@
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
                             android:inputType="number"
-                            android:textColorHint="@color/secondary"
-                            android:textColor="@color/secondary" />
+                            android:textColor="@color/secondary"
+                            android:textColorHint="@color/secondary" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/emailLayout"
+                        style="@style/TextInputLayoutStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/TextInputLayoutStyle"
-                        android:hint="Email"
-                        app:placeholderText="abc@xyz.com"
                         android:layout_marginTop="10dp"
+                        android:hint="Email"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
-                        app:layout_constraintStart_toStartOf="@id/firstNameLayout"
                         app:layout_constraintEnd_toEndOf="@id/lastNameLayout"
-                        app:layout_constraintTop_toBottomOf="@id/phoneLayout">
+                        app:layout_constraintStart_toStartOf="@id/firstNameLayout"
+                        app:layout_constraintTop_toBottomOf="@id/phoneLayout"
+                        app:placeholderText="abc@xyz.com">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/emailText"
@@ -329,18 +330,18 @@
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
                             android:inputType="text"
-                            android:textColorHint="@color/secondary"
-                            android:textColor="@color/secondary" />
+                            android:textColor="@color/secondary"
+                            android:textColorHint="@color/secondary" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/passwordLayout"
+                        style="@style/TextInputLayoutStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/TextInputLayoutStyle"
-                        android:hint="Password"
                         android:layout_marginTop="10dp"
+                        android:hint="Password"
                         app:endIconMode="password_toggle"
                         app:endIconTint="@color/black"
                         app:layout_constraintEnd_toEndOf="@id/lastNameLayout"
@@ -353,8 +354,8 @@
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
                             android:inputType="textPassword"
-                            android:textColorHint="@color/secondary"
-                            android:textColor="@color/secondary" />
+                            android:textColor="@color/secondary"
+                            android:textColorHint="@color/secondary" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -363,35 +364,34 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
+                        android:layout_marginTop="12dp"
                         android:text="@string/terms_of_services"
-                        android:textSize="16dp"
                         android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:layout_marginTop="12dp"
+                        android:textSize="@dimen/H5"
                         app:layout_constraintEnd_toEndOf="@id/passwordLayout"
-                        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
-                        app:layout_constraintStart_toStartOf="@id/passwordLayout"/>
+                        app:layout_constraintStart_toStartOf="@id/passwordLayout"
+                        app:layout_constraintTop_toBottomOf="@id/passwordLayout" />
 
                     <com.google.android.material.card.MaterialCardView
                         android:id="@+id/card_createAccount"
                         android:layout_width="200dp"
                         android:layout_height="50dp"
-                        android:transitionName="Btn"
-                        app:layout_constraintTop_toBottomOf="@+id/subHeadingTerm"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_marginBottom="20dp"
                         android:layout_marginTop="25dp"
+                        android:layout_marginBottom="20dp"
                         android:backgroundTint="@color/secondary"
-                        >
+                        android:transitionName="Btn"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/subHeadingTerm">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/roboto_bold"
                             android:text="@string/sign_up"
                             android:textColor="@color/white"
-                            android:fontFamily="@font/roboto_bold"
-                            android:layout_gravity="center"
                             android:textSize="@dimen/H4" />
 
                     </com.google.android.material.card.MaterialCardView>
