--- a/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
@@ -55,6 +55,7 @@
         android:id="@+id/frame2"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        style="@style/OnBoardingCardViewTheme"
         app:layout_constraintStart_toEndOf="@id/frame1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -78,7 +79,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginTop="40dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="50dp"
+                    android:layout_marginStart="60dp"
                     tools:layout_editor_absoluteY="15dp"
                     tools:ignore="MissingConstraints" />
 
@@ -117,7 +118,7 @@
                     android:textColor="@color/black"
                     android:fontFamily="@font/roboto_bold"
                     android:layout_marginTop="40dp"
-                    android:layout_marginStart="50dp"
+                    android:layout_marginStart="60dp"
                     android:layout_marginEnd="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -148,8 +149,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_marginStart="50dp"
-                        android:layout_marginEnd="50dp"
+                        android:layout_marginStart="60dp"
+                        android:layout_marginEnd="60dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent">
@@ -436,27 +437,27 @@
 
                     </LinearLayout>
 
-                    <com.google.android.material.card.MaterialCardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/card_SingleNext"
                         android:layout_width="170dp"
-                        android:layout_height="50dp"
+                        android:layout_height="@dimen/button_height"
+                        style="@style/ButtonCardView"
+                        android:layout_marginBottom="40dp"
                         android:transitionName="backBtn"
-                        android:backgroundTint="@color/secondary"
-                        app:layout_constraintVertical_bias="0.8"
+                        app:cardBackgroundColor="@color/black"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/ll4"
                         app:layout_constraintEnd_toEndOf="@id/ll5">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/next"
-                            android:textColor="@color/primary"
+                            android:textColor="@color/white"
                             android:fontFamily="@font/roboto_bold"
                             android:layout_gravity="center"
-                            android:textSize="16dp" />
+                            android:textSize="@dimen/H4" />
 
-                    </com.google.android.material.card.MaterialCardView>
+                    </androidx.cardview.widget.CardView>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
