--- a/app/src/main/res/layout/activity_second_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_second_onboarding_screen.xml
@@ -423,7 +423,7 @@
                     <com.google.android.material.card.MaterialCardView
                         android:id="@+id/card_SingleNext"
                         android:layout_width="170dp"
-                        android:layout_height="50dp"
+                        android:layout_height="@dimen/button_height"
                         android:transitionName="Btn"
                         android:backgroundTint="@color/secondary"
                         android:layout_marginBottom="40dp"
