--- a/app/src/main/res/layout/activity_first_on_boarding_screen.xml
+++ b/app/src/main/res/layout/activity_first_on_boarding_screen.xml
@@ -56,6 +56,7 @@
         android:id="@+id/frame2"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        style="@style/OnBoardingCardViewTheme"
         app:layout_constraintStart_toEndOf="@id/frame1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
