--- a/app/src/main/res/layout/activity_final_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_final_onboarding_screen.xml
@@ -10,19 +10,19 @@
         android:id="@+id/frame1"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/secondaryBackground"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/frame2"
-        android:background="@color/secondaryBackground">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/logo"
             android:layout_width="300dp"
             android:layout_height="120dp"
-            android:transitionName="logo_img"
             android:layout_marginTop="16dp"
             android:src="@drawable/svg_logo"
+            android:transitionName="logo_img"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -32,32 +32,33 @@
             style="@style/OnboardingHeadingTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
             android:text="@string/manage_all_your_properties_amp_n_guest_with_ease"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/logo"/>
+            app:layout_constraintTop_toBottomOf="@id/logo" />
 
         <ImageView
             android:id="@+id/coverImg"
             android:layout_width="400dp"
             android:layout_height="0dp"
-            android:transitionName="onBoardingImg"
             android:layout_marginVertical="20dp"
             android:src="@drawable/wait_for_service"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:transitionName="onBoardingImg"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title1"/>
+            app:layout_constraintTop_toBottomOf="@id/title1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/frame2"
+        style="@style/OnBoardingCardViewTheme"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        app:layout_constraintStart_toEndOf="@id/frame1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/frame1"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.core.widget.NestedScrollView
@@ -73,10 +74,10 @@
                     android:id="@+id/demoBackbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:transitionName="backBtn"
                     android:layout_marginStart="60dp"
                     android:layout_marginTop="40dp"
                     android:src="@drawable/vector_back_btn"
+                    android:transitionName="backBtn"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:ignore="MissingConstraints"
@@ -117,16 +118,16 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
                     android:layout_marginTop="40dp"
+                    android:orientation="vertical"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/llBar">
 
                     <LinearLayout
                         android:id="@+id/congratulationLayout"
                         android:layout_width="match_parent"
-                        android:layout_marginStart="60dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="60dp"
                         android:orientation="vertical">
 
                         <TextView
@@ -136,17 +137,17 @@
                             android:text="And that’s it."
                             android:textColor="@color/black"
                             android:textFontWeight="500"
-                            android:textSize="@dimen/H2"/>
+                            android:textSize="@dimen/H2" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto"
-                            android:layout_marginEnd="30dp"
                             android:layout_marginTop="10dp"
+                            android:layout_marginEnd="30dp"
+                            android:fontFamily="@font/roboto"
                             android:text="Congratulations!\nYou have successfully registered your Hotel Chain [chain_Name] with us.\n We just need to check a few things first, we will let you know when your one stop hotel solution is ready to go."
                             android:textColor="@color/black"
-                            android:textSize="@dimen/H4"/>
+                            android:textSize="@dimen/H4" />
 
                     </LinearLayout>
 
@@ -154,8 +155,8 @@
                         android:id="@+id/dashLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:visibility="gone"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="gone">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -165,7 +166,7 @@
                             android:text="Good News!!!"
                             android:textColor="@color/black"
                             android:textFontWeight="500"
-                            android:textSize="@dimen/H2"/>
+                            android:textSize="@dimen/H2" />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -174,26 +175,25 @@
                             android:fontFamily="@font/roboto"
                             android:text="Your account has been verified and activated.\n\nNow you can manage all your properties, guest and a whole lot of other things in just one place."
                             android:textColor="@color/black"
-                            android:textSize="@dimen/H4"/>
+                            android:textSize="@dimen/H4" />
 
 
                         <com.google.android.material.card.MaterialCardView
                             android:id="@+id/goToDash"
                             android:layout_width="200dp"
                             android:layout_height="50dp"
-                            android:layout_marginTop="20dp"
                             android:layout_marginStart="50dp"
+                            android:layout_marginTop="20dp"
                             android:backgroundTint="@color/secondary"
-                            android:paddingBottom="15dp"
-                            >
+                            android:paddingBottom="15dp">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:fontFamily="@font/roboto_bold"
                                 android:text="Go To Dashboard"
                                 android:textColor="@color/white"
-                                android:fontFamily="@font/roboto_bold"
-                                android:layout_gravity="center"
                                 android:textFontWeight="500"
                                 android:textSize="@dimen/H5" />
 
