--- a/app/src/main/res/layout/activity_second_chain_onboarding.xml
+++ b/app/src/main/res/layout/activity_second_chain_onboarding.xml
@@ -11,59 +11,60 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:background="@color/secondaryBackground"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/frame2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/frame2">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/logo"
             android:layout_width="300dp"
             android:layout_height="120dp"
-            android:transitionName="logo_img"
             android:layout_marginTop="25dp"
             android:src="@drawable/svg_logo"
-            app:layout_constraintStart_toStartOf="parent"
+            android:transitionName="logo_img"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/title1"
             style="@style/OnboardingHeadingTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
             android:text="@string/manage_all_your_properties_amp_n_guest_with_ease"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/logo"/>
+            app:layout_constraintTop_toBottomOf="@id/logo" />
 
         <ImageView
             android:id="@+id/onBoardingImg"
             android:layout_width="400dp"
             android:layout_height="0dp"
-            android:transitionName="onBoardingImg"
             android:src="@drawable/svg_property"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:transitionName="onBoardingImg"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title1"/>
+            app:layout_constraintTop_toBottomOf="@id/title1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/frame2"
+        style="@style/OnBoardingCardViewTheme"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        app:layout_constraintStart_toEndOf="@id/frame1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/frame1"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true"
-            android:background="@color/primaryBackground">
+            android:background="@color/primaryBackground"
+            android:fillViewport="true">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -73,38 +74,38 @@
                     android:id="@+id/demoBackbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="60dp"
+                    android:layout_marginTop="40dp"
                     android:src="@drawable/vector_back_btn"
                     android:transitionName="backBtn"
-                    android:layout_marginTop="40dp"
-                    android:layout_marginStart="60dp"
-                    tools:layout_editor_absoluteY="15dp"
-                    tools:ignore="MissingConstraints"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    tools:ignore="MissingConstraints"
+                    tools:layout_editor_absoluteY="15dp" />
 
                 <LinearLayout
                     android:id="@+id/llBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
                     android:orientation="horizontal"
                     android:visibility="gone"
-                    android:layout_marginStart="30dp"
-                    app:layout_constraintTop_toTopOf="@id/demoBackbtn"
                     app:layout_constraintBottom_toBottomOf="@id/demoBackbtn"
-                    app:layout_constraintStart_toEndOf="@id/demoBackbtn">
+                    app:layout_constraintStart_toEndOf="@id/demoBackbtn"
+                    app:layout_constraintTop_toTopOf="@id/demoBackbtn">
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="120dp"
                         android:layout_height="4dp"
-                        app:cardCornerRadius="5dp"
-                        app:cardBackgroundColor="@color/secondary"/>
+                        app:cardBackgroundColor="@color/secondary"
+                        app:cardCornerRadius="5dp" />
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="120dp"
                         android:layout_height="4dp"
-                        app:cardCornerRadius="5dp"
                         android:layout_marginHorizontal="5dp"
-                        app:cardBackgroundColor="@color/grey30"/>
+                        app:cardBackgroundColor="@color/grey30"
+                        app:cardCornerRadius="5dp" />
 
                 </LinearLayout>
 
@@ -112,14 +113,14 @@
                     android:id="@+id/heading"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/let_s_create_your_property_chain_s_profile"
-                    android:textSize="@dimen/H2"
-                    android:textFontWeight="500"
-                    android:textColor="@color/black"
-                    android:fontFamily="@font/roboto_bold"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/roboto_bold"
+                    android:text="@string/let_s_create_your_property_chain_s_profile"
+                    android:textColor="@color/black"
+                    android:textFontWeight="500"
+                    android:textSize="@dimen/H2"
                     app:layout_constraintStart_toStartOf="@id/demoBackbtn"
-                    app:layout_constraintTop_toBottomOf="@id/llBar"/>
+                    app:layout_constraintTop_toBottomOf="@id/llBar" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/single_layout"
@@ -134,19 +135,19 @@
 
                     <com.google.android.material.card.MaterialCardView
                         android:id="@+id/cardImg"
+                        style="@style/CardViewTheme"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        style="@style/CardViewTheme"
-                        app:cardElevation="2dp"
-                        app:strokeWidth="1dp"
-                        app:cardCornerRadius="10dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginEnd="60dp"
                         app:cardBackgroundColor="@color/white"
-                        app:layout_constraintDimensionRatio="1:1"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="2dp"
                         app:layout_constraintBottom_toBottomOf="@id/nop"
+                        app:layout_constraintDimensionRatio="1:1"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@id/propertyChainLayout">
+                        app:layout_constraintTop_toTopOf="@id/propertyChainLayout"
+                        app:strokeWidth="1dp">
 
                         <ImageView
                             android:id="@+id/selectImg"
@@ -220,15 +221,15 @@
                         android:id="@+id/nop"
                         android:layout_width="0dp"
                         android:layout_height="45dp"
-                        app:cardElevation="0dp"
-                        app:strokeWidth="1dp"
-                        app:strokeColor="@color/subtitle"
                         android:layout_marginTop="15dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="10dp"
+                        app:cardElevation="0dp"
                         app:layout_constraintEnd_toEndOf="@id/propertyChainLayout"
                         app:layout_constraintStart_toStartOf="@id/propertyChainLayout"
-                        app:layout_constraintTop_toBottomOf="@id/propertyChainLayout">
+                        app:layout_constraintTop_toBottomOf="@id/propertyChainLayout"
+                        app:strokeColor="@color/subtitle"
+                        app:strokeWidth="1dp">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
@@ -363,12 +364,12 @@
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/card_SingleNext"
+                        style="@style/ButtonCardView"
                         android:layout_width="170dp"
                         android:layout_height="@dimen/button_height"
-                        style="@style/ButtonCardView"
+                        android:layout_marginBottom="40dp"
                         android:backgroundTint="@color/secondary"
                         android:transitionName="Btn"
-                        android:layout_marginBottom="40dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@id/cardImg">
 
