--- a/app/src/main/res/layout/item_amenities.xml
+++ b/app/src/main/res/layout/item_amenities.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
@@ -10,7 +10,8 @@
         android:id="@+id/amenityIcon"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_margin="5dp"
+        android:layout_marginVertical="5dp"
+        android:layout_marginEnd="5dp"
         android:src="@drawable/svg_ac"/>
 
         <TextView
@@ -19,7 +20,6 @@
             android:layout_height="wrap_content"
             android:text="Child-friendly activities"
             android:textSize="@dimen/H5"
-            android:layout_marginHorizontal="5dp"
             android:textColor="@color/secondary"
             android:fontFamily="@font/roboto"/>
 
