--- a/app/src/main/res/layout/item_properties.xml
+++ b/app/src/main/res/layout/item_properties.xml
@@ -2,9 +2,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    style="@style/CardViewTheme"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
-    app:cardElevation="0dp"
+    app:cardElevation="4dp"
     android:layout_marginEnd="10dp"
     android:layout_marginVertical="10dp">
 
