--- a/app/src/main/res/layout/fragment_add_room_type.xml
+++ b/app/src/main/res/layout/fragment_add_room_type.xml
@@ -20,7 +20,7 @@
             android:text="Create Room Type"
             android:textSize="@dimen/H2"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/roboto_bold"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -112,18 +112,10 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/website_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:layout_height="@dimen/textInputLayoutHeight"
                     android:hint="Short Code"
                     android:layout_marginTop="10dp"
-                    android:textColorHint="@color/black"
-                    app:boxStrokeColor="@color/black"
-                    app:hintTextColor="@color/secondary"
-                    app:boxStrokeWidthFocused="2dp"
-                    app:boxCornerRadiusTopStart="10dp"
-                    app:boxCornerRadiusBottomStart="10dp"
-                    app:boxCornerRadiusBottomEnd="10dp"
-                    app:boxCornerRadiusTopEnd="10dp"
+                    style="@style/TextInputLayoutStyle"
                     app:endIconMode="clear_text"
                     app:endIconTint="@color/black">
 
@@ -131,27 +123,20 @@
                         android:id="@+id/website_text"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:textSize="@dimen/H5"
                         android:fontFamily="@font/roboto"
                         android:inputType="text"
-                        android:textColorHint="@color/secondary"
+                        android:textColorHint="@drawable/hint_selector"
                         android:textColor="@color/secondary" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:layout_height="@dimen/textInputLayoutHeight"
                     android:hint="Room Type Name"
-                    android:textColorHint="@color/black"
-                    app:boxStrokeColor="@color/black"
-                    app:hintTextColor="@color/secondary"
-                    android:layout_marginTop="8dp"
-                    app:boxStrokeWidthFocused="2dp"
-                    app:boxCornerRadiusTopStart="10dp"
-                    app:boxCornerRadiusBottomStart="10dp"
-                    app:boxCornerRadiusBottomEnd="10dp"
-                    app:boxCornerRadiusTopEnd="10dp"
+                    android:layout_marginTop="10dp"
+                    style="@style/TextInputLayoutStyle"
                     app:endIconMode="clear_text"
                     app:endIconTint="@color/black">
 
@@ -160,7 +145,8 @@
                         android:layout_height="match_parent"
                         android:fontFamily="@font/roboto"
                         android:inputType="text"
-                        android:textColorHint="@color/secondary"
+                        android:textSize="@dimen/H5"
+                        android:textColorHint="@drawable/hint_selector"
                         android:textColor="@color/secondary" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -174,7 +160,7 @@
 
                     <com.google.android.material.card.MaterialCardView
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/textInputLayoutHeight"
                         app:strokeWidth="1dp"
                         app:cardBackgroundColor="@color/white"
                         android:layout_weight="1">
@@ -243,7 +229,7 @@
 
                     <com.google.android.material.card.MaterialCardView
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/textInputLayoutHeight"
                         app:strokeWidth="1dp"
                         app:cardBackgroundColor="@color/white"
                         android:layout_marginStart="10dp"
@@ -322,7 +308,7 @@
 
                     <com.google.android.material.card.MaterialCardView
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/textInputLayoutHeight"
                         app:strokeWidth="1dp"
                         app:cardBackgroundColor="@color/white"
                         android:layout_weight="1">
@@ -391,7 +377,7 @@
 
                     <com.google.android.material.card.MaterialCardView
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/textInputLayoutHeight"
                         app:strokeWidth="1dp"
                         app:cardBackgroundColor="@color/white"
                         android:layout_marginStart="10dp"
@@ -470,7 +456,7 @@
 
                     <com.google.android.material.card.MaterialCardView
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/textInputLayoutHeight"
                         app:strokeWidth="1dp"
                         app:cardBackgroundColor="@color/white"
                         android:layout_weight="1">
@@ -539,7 +525,7 @@
 
                     <com.google.android.material.card.MaterialCardView
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/textInputLayoutHeight"
                         app:strokeWidth="1dp"
                         app:cardBackgroundColor="@color/white"
                         android:layout_marginStart="10dp"
